# BluetoothDemo

./: CMakeLists.txt  README.md
inc/base/: Bluetooth.hpp
inc/ui/: mainwindow.h
src/: CMakeLists.txt  main.cpp
src/base/: Bluetooth.cpp
src/ui/: mainwindow.cpp  mainwindow.ui
